tests/toylang/neg/000918_mutation.toylang
program a = { if a . sleep; } .
